[package]
name = "todo-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
chrono = { version = "0.4.19", features = ["serde"] }
clap = { version = "3.0.5", features = ["derive"] }
home = "0.5.3"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
